# comfyui-arena-suite

./: .changelog-mcp.json  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARENA_PATH_FIX.md  ARENA_WORKFLOW_ANALYZER_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR_SETUP.md  EXPERIMENTS.md  GLOBAL RULES.md  GLOBAL-RULES.md  MANIFEST.in  OPTIMIZATION_REPORT.md  PROJECT-RULES.md  PR_READY.md  README.md  SECURITY_FIX.md  TEST_AUTO_ENV_MANAGEMENT.md  TEST_CACHE_INSTRUCTIONS.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  simple_api_test.py  tatus  temp___init__view.txt  test_arena_smart.json  test_direct_api.py  test_imports.py  test_json_analysis.py  test_mcp_connection.py  test_mcp_status.py  test_v2_11_analysis.py  test_workflow.json  user-workflow.mdc
.cursor/rules/: 00-process.mdc  10-comfyui-node.mdc  20-tests-tooling.mdc  30-release.mdc  40-platform-paths.mdc  50-context.mdc  60-mcp-tools.mdc  comfyui.mdc  user-workflow.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: codex-task.yml  task.md
.github/workflows/: ci.yml
ISSUE_TEMPLATE/: codex-task.yml
autocache/: PROMPTS_codex.md  __init__.py  arena_auto_cache_simple.py  arena_auto_cache_simple_backup.py  arena_hybrid_cache.py  arena_path_manager.py  arena_smart_cache.py
config/: extra_model_paths.yaml
custom_nodes/ComfyUI_Arena/: README.md  __init__.py
custom_nodes/ComfyUI_Arena/autocache/: PROMPTS_codex.md  __init__.py  arena_auto_cache.py  arena_auto_cache_old.py  arena_auto_cache_simple.py
custom_nodes/ComfyUI_Arena/legacy/: __init__.py  arena_make_tiles_segs.py  core.py
custom_nodes/ComfyUI_Arena/updater/: PROMPTS_codex.md  __init__.py  arena_model_updater.py
docs/: ARENA_WORKFLOW_ANALYZER.md  DEVELOPMENT.md  HOW_IT_WORKS.md  IDEAS.md  INSTALL.md  ROADMAP.md  cache_analysis_2024.md  migration_v5.md  task-tracker.md  tasktracker.md  test_mcp.md
docs/docs/: TROUBLESHOOTING_SETTINGS_API.md  arena-autocache-settings-ui.md
docs/docs/en/: config.md  manual.md
docs/docs/ru/: config.md  manual.md  troubleshooting.md
docs/en/: MANUAL.md  arena_autocache.md  cli.md  config.md  index.md  manual.md  nodes.md  quickstart.md  troubleshooting.md
docs/ru/: MANUAL.md  SUCCESS_CACHING.md  arena_autocache.md  arena_autocache_base.md  cache_warmup.md  cli.md  config.md  find_comfyui_port.md  index.md  min_size_mb_config.md  nodes.md  preload_improvements.md  quickstart.md  troubleshooting.md
examples/: smart_cache_demo.py
legacy/: __init__.py  arena_make_tiles_segs.py  core.py
scripts/: ARENA_MANIFEST.example.yaml  README_BOOTSTRAP_V2.md  arena_benchmark_disk.py  arena_bootstrap_cache.bat  arena_bootstrap_cache.ps1  arena_bootstrap_cache_v2.bat  arena_bootstrap_cache_v2.ps1  arena_fast_start.bat  arena_fix_pkgutil.bat  arena_optimize_manager.bat  arena_set_cache.bat  arena_startup_fix_report.md  arena_test_comfyui_startup.bat  arena_updater_civitai.py  arena_updater_hf.py  check_dev_setup.bat  check_dev_setup.ps1  fix_mcp_config.ps1  sync_js_files.ps1  sync_web_extension.ps1  sync_workflow_analyzer.ps1  test_bootstrap_v2.bat  test_workflow_analysis.py
tests/: __init__.py  conftest.py  simple_api_test.py  test_arena_auto_cache.py  test_arena_autocache_overlay.py  test_arena_ui_payload.py  test_arena_web_directory.py  test_autocache_audit_warmup.py  test_autocache_config.py  test_autocache_ops_modes.py  test_autocache_simple.py  test_autocache_warmup.py  test_legacy_preview_bridge.py  test_smoke.py
tests/fixtures/: arena_ui_payload_shape.json
tests/test_nodes/: __init__.py  test_arena_autocache.py
user/: arena_autocache.env
web/: arena_autocache.js  arena_settings_panel.js  arena_settings_panel_test.js  arena_settings_save_button.js  arena_simple_header.js  arena_workflow_analyzer.js
web/arena/: arena_autocache.js
web/extensions/: arena_autocache.js  arena_settings_panel.js  arena_settings_panel_test.js  arena_workflow_analyzer.js
